# e3d-maps

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  settings.py  training_runs.jsonl
agents/: __init__.py  adapter_manager.py  agent_swarm_formation_agent.py  base_agent.py  capital_conviction_agent.py  capital_migration_agent.py  confidence_scoring_agent.py  congestion_agent.py  destination_prediction_agent.py  liquidity_forecast_agent.py  maps_news_agent.py  narrative_acceleration_agent.py  outcome_scoring_agent.py  question_queue.json  qwen_orchestrator.py  reflexivity_agent.py  route_closure_agent.py  route_emergence_agent.py  route_hazard_agent.py  route_health_agent.py  runner.py  scheduler.py  story_hypothesis_agent.py  watch_agent.py  watch_draft_generator.py
api/: __init__.py  auth.py  maps_routes.py  normalizers.py  registration.py  serialization.py  story_types_routes.py
clients/: __init__.py  _base_api_client.py  clickhouse_client.py  e3d_api_client.py  nft_manager_client.py  qwen_client.py  trading_outcome_client.py  watch_feed_client.py
db/: seed_story_types.py
deploy/: ai.e3d.maps-runner.env.example  ai.e3d.maps-runner.plist  ai.e3d.qwen-adapter-window-runner.plist  deploy-ui.sh  qwen_adapter_window_runner.sh
docs/: E3D_ECOSYSTEM_ARCHITECTURE.md  agent-loops-spec.md  deploy_to_production.md  e3d-maps-ui-intelligence-upgrade-feature-ticket.md  e3d-maps-watch-agent-v1-feature-ticket-revised.md  e3d_maps_navigation_intelligence_spec.md  e3d_maps_v1_2_addendum.md  e3d_maps_v2_horizons.md  llms.txt  (+2 more)
(+175 files in other folders)
