[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "e3d-maps"
version = "0.0.0"
description = "E3D Maps shared schemas and repository bootstrap."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9"
]

[tool.setuptools]
packages = ["agents", "api", "clients", "jobs", "schemas", "services"]
py-modules = ["settings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
